<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        android:icon="@drawable/ic_menu_search_24dp"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView"/>
    <item android:id="@+id/action_category"
        android:title="categorize"
        android:icon="@drawable/ic_sort_category"
        android:orderInCategory="100"
        app:showAsAction="always" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_aboutUs"
        android:title="@string/action_aboutus"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item android:id="@+id/action_help"
        android:title="@string/action_help"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item android:id="@+id/action_signout"
        android:title="@string/action_signout"
        android:orderInCategory="100"
        app:showAsAction="never"/>

</menu>
